--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -208,7 +208,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/secHLine"
-        android:background="#080807"
+        android:background="#FFFFFF"
         />
 
     <LinearLayout
